{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 195,
  "lineage": "e1a8b5bc-7751-7193-9a40-65303e8d9997",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-03c8800ae0c5f7b36",
            "id": "rtb-03c8800ae0c5f7b36",
            "owner_id": "203685192694",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0063300ae7c8206ef",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0a8471008932f2930"
          },
          "dependencies": [
            "aws_internet_gateway.gw10",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0147d1a59da272e30",
            "domain": "vpc",
            "id": "eipalloc-01c1c94bd4f491072",
            "instance": "i-01cf7624406b6e881",
            "network_interface": "eni-0f1a09d72186877a9",
            "private_dns": "ip-10-10-10-123.eu-central-1.compute.internal",
            "private_ip": "10.10.10.123",
            "public_dns": "ec2-18-156-22-214.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.156.22.214",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.jenkins",
            "aws_key_pair.luminor_jenkins",
            "aws_security_group.jenkins",
            "aws_subnet.subnet10",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b418580298265d5c",
            "arn": "arn:aws:ec2:eu-central-1:203685192694:instance/i-01cf7624406b6e881",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01cf7624406b6e881",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "luminor_jenkins",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f1a09d72186877a9",
            "private_dns": "ip-10-10-10-123.eu-central-1.compute.internal",
            "private_ip": "10.10.10.123",
            "public_ip": "18.195.86.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01c207c9f85e618a9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f81578e9e6bd42bc",
            "tags": {
              "Name": "Luminor Jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01e4e5ff4e99a757c"
            ]
          },
          "dependencies": [
            "aws_key_pair.luminor_jenkins",
            "aws_security_group.jenkins",
            "aws_subnet.subnet10",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw10",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0063300ae7c8206ef",
            "owner_id": "203685192694",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0a8471008932f2930"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:203685192694:security-group/sg-01e4e5ff4e99a757c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow to all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e4e5ff4e99a757c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from any",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPs from any",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins from any",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from any",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20200325183334682500000001",
            "name_prefix": null,
            "owner_id": "203685192694",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0a8471008932f2930"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet10",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:203685192694:subnet/subnet-0f81578e9e6bd42bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.10.0/24",
            "id": "subnet-0f81578e9e6bd42bc",
            "map_public_ip_on_launch": true,
            "owner_id": "203685192694",
            "tags": {
              "Name": "subnet10"
            },
            "vpc_id": "vpc-0a8471008932f2930"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc10",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:203685192694:vpc/vpc-0a8471008932f2930",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0f40aeaeb1615deea",
            "default_route_table_id": "rtb-03c8800ae0c5f7b36",
            "default_security_group_id": "sg-0f4c955651fe592b6",
            "dhcp_options_id": "dopt-548c4d3e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a8471008932f2930",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03c8800ae0c5f7b36",
            "owner_id": "203685192694",
            "tags": {
              "Name": "vpc10"
            }
          }
        }
      ]
    }
  ]
}